--- a/resource/skill_sound.yaml
+++ b/resource/skill_sound.yaml
@@ -882,3 +882,14 @@ skill_yalianbengxici: 'https://seer2-resource.yuuinih.com/sound/skill/11251.mp3'
 skill_chongzhilingyu: 'https://seer2-resource.yuuinih.com/sound/skill/06_3_002.mp3'
 skill_xueji: 'https://seer2-resource.yuuinih.com/sound/skill/06_2_003.mp3'
 skill_chongqundajun: 'https://seer2-resource.yuuinih.com/sound/skill/06_3_001.mp3'
+skill_zhandoujieji: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_001.mp3'
+skill_zhandouzhiqi: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_002.mp3'
+skill_nizhan: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_001.mp3'
+skill_zhandoudaren: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_001.mp3'
+skill_douzhanzhihun: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_003.mp3'
+skill_sidou: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_002.mp3'
+skill_zhankuangshankongpo: 'https://seer2-resource.yuuinih.com/sound/skill/11434.mp3'
+skill_zhanzhilingyu: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_001.mp3'
+skill_kuangzhan: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_003.mp3'
+skill_juezhanzhidi: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_003.mp3'
+skill_yitedaluandou: 'https://seer2-resource.yuuinih.com/sound/skill/11438.mp3'
