--- a/resource/mark_image.yaml
+++ b/resource/mark_image.yaml
@@ -249,3 +249,6 @@ mark_lianji: 'https://seer2-resource.yuuinih.com/png/markImage/3225.png'
 mark_chongzhilingyu: 'https://seer2-resource.yuuinih.com/png/markImage/3226.png'
 mark_chongqunlingyu: 'https://seer2-resource.yuuinih.com/png/markImage/3227.png'
 mark_global_chongqun: 'https://seer2-resource.yuuinih.com/png/markImage/20011.png'
+mark_zhanzhilingyu: 'https://seer2-resource.yuuinih.com/png/markImage/3281.png'
+mark_zhandoulingyu: 'https://seer2-resource.yuuinih.com/png/markImage/3282.png'
+mark_global_guzhanchang: 'https://seer2-resource.yuuinih.com/png/markImage/20012.png'
